# verification-algorithms

./: CMakeLists.txt  LICENSE  README.md  z3-setup.sh
.github/workflows/: linux.yml
cmake/: ExternalCatch2.cmake  ExternalFormulaTree.cmake  ExternalZ3.cmake  formulatree-main.cpp  z3-main.cpp
examples/: 100bit-ring-counter-ic3.cpp  3bit-ring-counter-2.cpp  3bit-ring-counter-ic3.cpp  3bit-ring-counter.cpp  cnf.cpp  mutex-pb.cpp  mutex.cpp  producer-consumer-pb.cpp  z3-solver-3.cpp  z3-solver.cpp
include/: kripke-structure.hpp
include/common/: symbol.hpp  verifier.hpp  z3-solver.hpp
include/formula-tree/: formula-tree.h  formula-type.hpp
include/k-induction/: k-induction.hpp
include/ltl-bmc/: ltl-bmc.hpp
include/verification-algorithms/common/: cnf.hpp  matrix.hpp  symbol.hpp  trace.hpp  types.hpp  verifier.hpp  z3-solver.hpp
include/verification-algorithms/ic3/: ic3.hpp
include/verification-algorithms/k-induction/: k-induction.hpp
include/verification-algorithms/ltl-bmc/: ltl-bmc.hpp
include/verification-algorithms/pnet-coverability/: pnet-coverability.hpp
libs/formula-tree/: CMakeLists.txt
libs/formula-tree/include/formula-tree/: formula-tree.h
libs/formula-tree/src/: FormulaLexer.g4  FormulaParser.g4  FormulaVisitor.cpp  FormulaVisitor.h  formula-tree.cpp
libs/formula-tree/tests/: CMakeLists.txt  test-formula-tree.cpp  test-sample-formula.cpp
src/common/: z3-solver.cpp
src/k-induction/: k-induction.cpp
src/ltl-bmc/: ltl-bmc.cpp
src/verification-algorithms/common/: cnf.cpp  symbol.cpp  z3-solver.cpp
src/verification-algorithms/ic3/: ic3.cpp
src/verification-algorithms/k-induction/: k-induction.cpp
src/verification-algorithms/ltl-bmc/: ltl-bmc.cpp
src/verification-algorithms/pnet-coverability/: pnet-coverability.cpp
tests/: CMakeLists.txt  kripke-structure-test.cpp  test-1000bit-ring-counter.cpp  test-3bit-ring-counter-2.cpp  test-3bit-ring-counter.cpp  test-3bit-shift-register.cpp  test-common.cpp  test-ic3.cpp  test-mutex-2.cpp  test-mutex.cpp  test-producer-consumer.cpp  test-symbol.cpp  test-trace.cpp  test-z3-solver-2.cpp  test-z3-solver.cpp
